<?xml version="1.0"?>
<package format="2">
  <name>rrt_planner</name>
  <version>1.0.0</version>
  <description>Plan paths using RRT. Compatible with move_base.</description>

  <maintainer email="joao.s.pinto@tecnico.ulisboa.pt">Joao Pinto</maintainer>
  <author email="joao.s.pinto@tecnico.ulisboa.pt">Joao Pinto</author>
  <author email="rita.cunha@tecnico.ulisboa.pt">Rita Cunha</author>
  <author email="anogueira@isr.tecnico.ulisboa.pt">Andre Nogueira</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <nav_core plugin="${prefix}/rrt_planner_plugin.xml"/>
  </export>
</package>
